@@ -1,5 +1,11 @@
 2012-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/command/replicate.py:
+	  Use rewrite functions; now allows replicating with
+	  username/password.
+
+2012-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* python/mushin/test/test_common_urlrewrite.py (added):
 	* python/mushin/common/urlrewrite.py (added):
 	  Add module and tests to rewrite URL's using default options,
